--- a/src/app/forms/components/complaints/complaints.component.scss
+++ b/src/app/forms/components/complaints/complaints.component.scss
@@ -46,5 +46,5 @@ div, h1 {font-family: var(--mainFont);}
 }
 
 @media (max-width:980px){
-    .cajaForm{width: 90%;}
+  .container-form{width: 90%;}
 }
