--- a/src/app/management/components/management-card/management-card.component.html
+++ b/src/app/management/components/management-card/management-card.component.html
@@ -1,4 +1,4 @@
-<img [src]="image" [alt]="position.image">
+<img [src]="image" [alt]="position.name">
 <h5>{{ position.name }}</h5>
 <p>{{ position.position }}</p>
 
