--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,27 +8,26 @@
         <p class="info-cemet">Centro de Estudiantes de Ingeniería en
           Metalurgia<br> de la Universidad de Santiago de Chile</p>
       </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" (click)="isShown = !isShown" [attr.aria-expanded]="isShown" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent" [ngClass]="{ 'show': isShown }">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbitem">
           <li class="nav-item">
-            <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="is-active">Inicio</a>
+            <a class="nav-link active ms-4" (click)="isShown = false" aria-current="page" routerLink="/home" routerLinkActive="is-active">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4" aria-current="page" routerLink="/noticias" routerLinkActive="is-active">Noticias</a>
+            <a class="nav-link active ms-4" (click)="isShown = false" aria-current="page" routerLink="/noticias" routerLinkActive="is-active">Noticias</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4" aria-current="page" routerLink="/directiva" routerLinkActive="is-active">Directiva</a>
+            <a class="nav-link active ms-4" (click)="isShown = false" aria-current="page" routerLink="/directiva" routerLinkActive="is-active">Directiva</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4" aria-current="page" routerLink="/calendario" routerLinkActive="is-active">Calendario</a>
+            <a class="nav-link active ms-4" (click)="isShown = false" aria-current="page" routerLink="/calendario" routerLinkActive="is-active">Calendario</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4  me-4" aria-current="page" routerLink="/forms/contacto" routerLinkActive="is-active">Contacto</a>
+            <a class="nav-link active ms-4  me-4" (click)="isShown = false" aria-current="page" routerLink="/forms/contacto" routerLinkActive="is-active">Contacto</a>
           </li>
         </ul>
 
