--- a/src/app/documents/components/documents-page/documents-page.component.scss
+++ b/src/app/documents/components/documents-page/documents-page.component.scss
@@ -1,12 +1,16 @@
-h1, div {font-family: var(--mainFont);}
+h1, h2, p, button, div {font-family: var(--mainFont);}
 
-.managementHead{
+main {
+  min-height: 45vh;
+}
+
+.documentsHead{
   background-color: rgb(245, 245, 245);
   height:100px;
   padding-top: 30px;
-  margin-bottom: 3rem;
   border-top:solid 0.1px rgb(226, 226, 226);
   border-bottom:solid 0.1px rgb(226, 226, 226);
+  margin-bottom: 3rem;
 }
 
 .h1Head{
@@ -14,8 +18,7 @@ h1, div {font-family: var(--mainFont);}
 }
 
 .container__btn-add {
-  // margin-top: 3rem;
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
 }
 
 .btn-add {
@@ -27,14 +30,11 @@ h1, div {font-family: var(--mainFont);}
   margin-top: 3px;
 }
 
-.cDirectiva{
-  // margin-top: 100px;
+.container-documents {
+  padding: 0 2rem;
 }
 
-.col{
-  text-align: center;
-}
-
-@media (max-width:980px){
-  .col{padding-left:40px;}
+a {
+  text-decoration: none;
+  color: orange;
 }
