--- a/src/app/management/components/management-card/management-card.component.scss
+++ b/src/app/management/components/management-card/management-card.component.scss
@@ -2,7 +2,9 @@ h5, p, button {font-family: var(--mainFont);}
 
 img{
   width: 180px;
+  height: 180px;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .container-btn {
