--- a/src/app/calendar/components/calendar/calendar.component.scss
+++ b/src/app/calendar/components/calendar/calendar.component.scss
@@ -1,3 +1,13 @@
+.noticiasHead{
+  background-color: rgb(245, 245, 245);
+  height:100px;
+  padding-top: 30px;
+  border-top:solid 0.1px rgb(226, 226, 226);
+  border-bottom:solid 0.1px rgb(226, 226, 226);
+  margin-bottom: 2rem;
+  
+}
+
 .wrapper-calendar {
   margin: 1rem;
   padding: .5rem;
@@ -12,7 +22,7 @@
   align-content: center;
   h1 {
     width: 100%;
-    font-size: 13px;
+    font-size: 20px;
   }
   button {
     cursor: pointer;
@@ -21,13 +31,19 @@
   }
 }
 
-div {
+.wrapper-calendar,.header-calendar,.diva.divd {
   text-align: center;
-  width: 300px;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
   Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
+.wrapper-calendar{
+  margin-left: 0px;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  border: solid 1px rgb(240, 240, 240);
+  height: 380px;
+}
 ol {
   list-style: none;
   display: grid;
@@ -62,7 +78,36 @@ h2 {
   margin-bottom: 4px;
   padding: 0;
 }
+.diva,.divd{
+  padding-top: 2px;
+  background-color: rgb(255, 255, 255);
+  border: solid 0.5px rgb(223, 223, 223);
+  border-radius: 4px;
+  transition: all ease 400ms;
+  width: 200px;
+  height: 35px;
+  margin-bottom: 10px;
+}
+.diva:hover,.divd:hover{
+ color: aquamarine;
+ background-color: rgb(245, 245, 245);
 
+}
+.day{
+  padding-top: 12px;
+  background-color: rgb(255, 255, 255);
+  height: 45px;
+  margin: 2px;
+  border:solid 0.5px rgb(233, 233, 233);
+  transition: all ease 400ms;
+}
+.day:hover{
+  background-color: rgb(241, 241, 241);
+}
+
+@media (max-width:980px){
+  .diva,.divd{width: 150px;}
+}
 // .first-day {
 //   grid-column-start: var;
 // }
