--- a/src/app/calendar/components/calendar/calendar.component.html
+++ b/src/app/calendar/components/calendar/calendar.component.html
@@ -1,32 +1,76 @@
 
-<div class="container-fluid noticiasHead">
+<div class="container-fluid calendarHead">
   <div class="container-fluid">
       <h1 class="h1Head">Calendario de Actividades</h1>
   </div>
 </div>
 
-<div class="wrapper-calendar container-fluid">
-  <div class="header-calendar container-fluid">
-    <div class="diva container-fluid">
-      <button (click)="changeMonth(-1)" class="btn-prev">Antes</button>
+<div class="container-page">
+  <div class="container-calendar">
+
+    <div class="wrapper-calendar">
+      <div class="header-calendar">
+        <!-- <div> -->
+          <button (click)="changeMonth(-1)" class="btn-changeMonth">Antes</button>
+        <!-- </div> -->
+        <!-- <h1>{{ dateSelect | date:'MMMM, yyyy' }}</h1> -->
+        <h2>{{ months[dateSelect.month()] }}, {{ dateSelect.year() }}</h2>
+        <!-- <div> -->
+          <button (click)="changeMonth(1)" class="btn-changeMonth">Siguiente</button>
+        <!-- </div> -->
+      </div>
+
+      <ol>
+        <li *ngFor="let day of week" class="day-name">{{ day | slice:0:3 }}</li>
+
+        <div *ngFor="let day of monthSelect; let first = first" style="display: flex; justify-content: center;">
+          <div *ngIf="dateDayNumberEvents.includes(day?.value) && monthEvents[dateDayNumberEvents.indexOf(day?.value)] === dateSelect.month() + 1; then thenBlock else elseBlock">
+          </div>
+          <ng-template #thenBlock>
+            <li (click)="clickDay(day)" [style.gridColumnStart]="first ? day?.indexWeek : 'auto'" class="day-number date-event">
+                <span>{{day?.value}}</span>
+            </li>
+          </ng-template>
+          <ng-template #elseBlock>
+            <li (click)="clickDay(day)" [style.gridColumnStart]="first ? day?.indexWeek : 'auto'" class="day-number">
+              <span>{{day?.value}}</span>
+            </li>
+          </ng-template>
+        </div>
+      </ol>
     </div>
-    <h1>{{ months[dateSelect.month()] }}, {{ dateSelect.year() }}</h1>
-    <div class="divd container-fluid">
-      <button (click)="changeMonth(1)" class="btn-next">Siguiente</button>
+
+    <div class="container__btn-add" *ngIf="user">
+      <button class="btn btn-primary btn-add" routerLink="/admin/agregar-evento">
+        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        </svg>
+          Crear Nuevo Evento
+      </button>
     </div>
+
+    <div class="event-selected" *ngIf="showEvents">
+      <div class="card mb-3" *ngFor="let event of eventsToShow; let i = index">
+        <div class="row g-0">
+          <div class="col-md-4" *ngIf="event.image !== ''">
+            <img [src]="images[i]" class="img-fluid rounded-start" [alt]="event.title">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">{{ event.title }}</h5>
+              <p class="card-text">{{event.details}}</p>
+              <p class="card-text"><small class="text-muted">{{event.date}}</small></p>
+              <button *ngIf="user" type="button" class="btn btn-danger btn-edit" (click)="deletePosition(event)">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                  <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
+                </svg>
+                <span class="visually-hidden">Button</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
-
-  <ol>
-    <li *ngFor="let day of week" class="day-name">{{ day | slice:0:3 }}</li>
-
-    <li class="day"  (click)="clickDay(day)" *ngFor="let day of monthSelect; let first = first"
-        [style.gridColumnStart]="first ? day?.indexWeek : 'auto'">
-      <span>{{day?.value}}</span>
-    </li>
-  </ol>
-</div>
-
-<hr>
-<div>
-	Fecha: {{dateValue | date}}
 </div>
