--- a/src/app/calendar/components/calendar/calendar.component.scss
+++ b/src/app/calendar/components/calendar/calendar.component.scss
@@ -1,49 +1,69 @@
-.noticiasHead{
+h1 {font-family: var(--mainFont);}
+
+.calendarHead{
   background-color: rgb(245, 245, 245);
   height:100px;
   padding-top: 30px;
+  margin-bottom: 3rem;
   border-top:solid 0.1px rgb(226, 226, 226);
   border-bottom:solid 0.1px rgb(226, 226, 226);
-  margin-bottom: 2rem;
-  
+  @media (max-width: 670px) {
+    margin-bottom: 1rem;
+  }
+}
+
+.h1Head{
+  margin-left: 50px;
+}
+
+.container-page {
+  margin: 3rem 3rem;
+  @media (max-width: 670px) {
+    margin: 1rem 1rem;
+  }
+}
+
+.container-calendar {
 }
 
 .wrapper-calendar {
-  margin: 1rem;
+  display: flex;
+  flex-direction: column;
   padding: .5rem;
   border: solid 1px #eaeaea;
   box-shadow: 0 0 10px #e4e4e4;
+  width: 100%;
+  height: 100%;
+  // @media (max-width: 768px) {
+  //   height: 266px;
+  // }
+  @media (max-width: 400px) {
+    min-width: 300px;
+    width: 95%;
+
+  }
 }
 
 .header-calendar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   align-content: center;
-  h1 {
-    width: 100%;
-    font-size: 20px;
+  height: 30px;
+  margin: 10px 0;
+  h2 {
+    font-size: 25px;
+    margin: 0;
   }
   button {
     cursor: pointer;
     background-color: transparent;
-    border: 0;
+    font-size: 20px;
+    border: solid 1px rgb(49, 49, 49);
+    border-radius: 5%;
   }
 }
 
-.wrapper-calendar,.header-calendar,.diva.divd {
-  text-align: center;
-  width: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-  Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.wrapper-calendar{
-  margin-left: 0px;
-  background-color: rgb(255, 255, 255);
-  width: 100%;
-  border: solid 1px rgb(240, 240, 240);
-  height: 380px;
-}
 ol {
   list-style: none;
   display: grid;
@@ -55,7 +75,7 @@ ol {
 .day-name {
   background: #eee;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 20px;
   margin-bottom: 2px;
   padding: 4px;
   text-align: center;
@@ -63,36 +83,48 @@ ol {
 
 li {
   cursor: pointer;
-  font-size: 1.5ch;
+  font-size: 2.2ch;
   padding: .25rem;
-  :hover {
+  text-align: center;
+  &.day-number:hover {
     font-weight: 600;
   }
+}
+
+.date-event {
+  text-align: center;
+  background: rgba(45, 57, 165, 0.6);
+  border-radius: 50%;
+  width: 35px;
 }
 
 .first-day {
   grid-column-start: var(--first-day-start, 0);
 }
 
-h2 {
-  margin-bottom: 4px;
-  padding: 0;
+.event-selected {
+  margin-top: 1rem;
+  // @media (max-width: 670px) {
+  //   margin: 0;
+  // }
 }
-.diva,.divd{
-  padding-top: 2px;
-  background-color: rgb(255, 255, 255);
-  border: solid 0.5px rgb(223, 223, 223);
-  border-radius: 4px;
-  transition: all ease 400ms;
-  width: 200px;
-  height: 35px;
-  margin-bottom: 10px;
-}
-.diva:hover,.divd:hover{
- color: aquamarine;
- background-color: rgb(245, 245, 245);
 
+.card {
+  max-width: 60%;
+  @media (max-width: 400px) {
+    max-width: 100%;
+  }
 }
+
+.container__btn-add {
+  margin: 1rem 0 0 1rem;
+}
+
+.btn-add {
+  display: flex;
+  justify-content: space-between;
+}
+
 .day{
   padding-top: 12px;
   background-color: rgb(255, 255, 255);
@@ -105,10 +137,7 @@ h2 {
   background-color: rgb(241, 241, 241);
 }
 
-@media (max-width:980px){
-  .diva,.divd{width: 150px;}
+.btn-edit {
+  border-radius: 50%;
 }
-// .first-day {
-//   grid-column-start: var;
-// }
 
