--- a/src/app/home/components/home/home.component.scss
+++ b/src/app/home/components/home/home.component.scss
@@ -106,6 +106,10 @@ p, div, button {font-family: var(--mainFont);}
   // grid-auto-flow: dense;
 }
 
+.container-without {
+  margin: 4rem 2rem 4rem 4rem;
+  width: 70%;
+}
 
 aside {
   display: flex;
@@ -113,6 +117,12 @@ aside {
   width: 30%;
   margin: 4rem 0;
   border-left: solid 1px rgb(165, 165, 165);
+}
+
+h3 {
+  margin-top: 3rem;
+  text-align: center;
+  color: rgb(95, 95, 95);
 }
 
 .container-post {
