--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,7 +1,9 @@
 h6, p, a, button {font-family: var(--mainFont);}
 
 .navbar{
-  // margin-bottom: 3rem;
+  height: 110px;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .logo{
