--- a/src/app/papeo/components/papeo/papeo.component.html
+++ b/src/app/papeo/components/papeo/papeo.component.html
@@ -1,1 +1,2 @@
 <button *ngIf='!isLoggedIn()' (click)="signIn()">Sing in</button>
+<!-- <button *ngIf="isLoggedIn()" (click)="getFiles()">Get Files</button> -->
